src/objects/IssueRequest_Life_Cycle__c.object
<CustomObject>
    <description>Assignment Managers support your assessments, data calls, surveys, and inspections by providing the metadata required to support these information gathering activities.</description>
    <fields>
        <fullName>Add_Signatures_Link__c</fullName>
        <formula>IF(
 ISBLANK( InvestigationType__c ) ,
 &apos;&apos;,
 HYPERLINK( 
  LEFT($Api.Partner_Server_URL_260, 
       FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)
  )+&apos;apex/ExAM__SignatureAttachmentPage?amid=&apos;&amp;Id, &quot;Add Signatures Link&quot;
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Signatures Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Date_Time__c</fullName>
        <label>Assessment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assessment_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Event</label>
        <referenceTo>Assessment_Event__c</referenceTo>
        <relationshipLabel>Assignment Manager</relationshipLabel>
        <relationshipName>Assignment_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Form_Completion__c</fullName>
        <inlineHelpText>The for the team needs to fill for each investigation type</inlineHelpText>
        <label>Assessment Form Completion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Form_Link__c</fullName>
        <formula>if((InvestigationType__c==&apos;&apos;),&apos;&apos;,HYPERLINK( &quot;/apex/ExAM__QuestionnaireCustom?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;InvestigationType__r.Template_name__c , &quot;Link to New Assessment Form&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Group</label>
        <referenceTo>Assessment_Group__c</referenceTo>
        <relationshipLabel>Assignment Manager</relationshipLabel>
        <relationshipName>Assignment_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Template_Type__c</fullName>
        <formula>if((InvestigationType__c==&apos;&apos;),&apos;&apos;, InvestigationType__r.Template_name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the Assessment Template in use by the Assignment Manager.</inlineHelpText>
        <label>Assessment Template Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Assigned Resource is typically the Salesforce user assigned with gathering the data or ensuring the gathering of the data.</inlineHelpText>
        <label>Assigned Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Request_Life_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Assignment External Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To create a hierarchy of sub issues or deficiencies</inlineHelpText>
        <label>Related Assignment</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipLabel>Assignment Manager List</relationshipLabel>
        <relationshipName>Assignment_Manager_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <defaultValue>Now()</defaultValue>
        <inlineHelpText>The date and time the Assignment Manager was created.</inlineHelpText>
        <label>Date Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <inlineHelpText>This field is updated with the most recent time the Assignment Manager was submitted.</inlineHelpText>
        <label>Date/Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the name of the Account that is being assessed. Assess Anything is enabled by default against the Account object. To add other accessible objects go to ExAM Configuration.</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assignment Manager</relationshipLabel>
        <relationshipName>Issue_Request_Life_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_End_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <inlineHelpText>This field records the time when an Assignment is submitted via an ExAM Viewer.</inlineHelpText>
        <label>Actual End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Start_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <inlineHelpText>This field records the time when an ExAM Viewer is opened and the first answer is recorded against the Assignment Manager.</inlineHelpText>
        <label>Actual Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Form_Link__c</fullName>
        <description>HYPERLINK( CASE( Investigation_Type__c, &quot;Safety and Health&quot;, &quot;/apex/DCSafetyInspection?issueid=&quot;&amp;Id , &quot;Student Bodily Injury&quot;,&quot;/apex/QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;templatename=Safety and Health Inspection&amp;accid=&quot;&amp;Facility_Name__r.Id,&quot;On Hold&quot;,&quot;/img/samples/flag_orange.gif&quot;,&quot;Scheduled&quot;,&quot;/img/samples/flag_yellow.gif&quot;,&quot;/s.gif&quot;) , &quot;Click here to go to New Form&quot;)if((InvestigationType__c==&apos;&apos;),&apos;&apos;,
HYPERLINK( &quot;/apex/QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;InvestigationType__r.Template_name__c , &quot;Link to New Mobile Assessment Form&quot;))</description>
        <formula>if((InvestigationType__c==&apos;&apos;),&apos;&apos;,HYPERLINK( &quot;/apex/ExAM__QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;SUBSTITUTE(InvestigationType__r.Template_name__c,&apos; &apos;,&apos;%20&apos;), &quot;Link to New Mobile Assessment Form&quot;))</formula>
        <inlineHelpText>This is to get the link of inspection</inlineHelpText>
        <label>Mobile Assessment Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestigationType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Salesforce ID for the Assessment Template.</inlineHelpText>
        <label>Assessment Template ID</label>
        <referenceTo>Main_questionaire__c</referenceTo>
        <relationshipLabel>Assignment Managers</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigation_Type__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Property Damage</fullName>
                </value>
                <value>
                    <fullName>Property Damage</fullName>
                </value>
                <value>
                    <fullName>Safety and Health Inspection Checklist</fullName>
                </value>
                <value>
                    <fullName>School Property and Safety Analysis</fullName>
                </value>
                <value>
                    <fullName>HAZMAT</fullName>
                </value>
                <value>
                    <fullName>Multi Assessment Manager</fullName>
                </value>
                <value>
                    <fullName>Emergency Procedures</fullName>
                </value>
                <value>
                    <fullName>Safety and Health</fullName>
                </value>
                <value>
                    <fullName>Student Bodily Injury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_request__c</fullName>
        <inlineHelpText>Textual description of the Assignment. Often used to communicate any specific requirements for a particular data collection activity.</inlineHelpText>
        <label>Issue/request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lens_Viewer_Link__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &quot;apex/ExAM__MultipleInspectionAssessmentViewer?amid=&quot;&amp;Id, &quot;Lens Viewer Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to support interaction with complex assessments, particularly focused on inter-related assessments.</inlineHelpText>
        <label>Lens Viewer Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Use this field to support additional metadata and reporting requirements around assessed accounts.</inlineHelpText>
        <label>Account Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Parking Lot</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>Park</fullName>
                </value>
                <value>
                    <fullName>Learning Area</fullName>
                </value>
                <value>
                    <fullName>Multiple Rooms</fullName>
                </value>
                <value>
                    <fullName>Office Area</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <inlineHelpText>The total score possible given the possible point values of the questions answered and the total points scored as determined by the Answer Option selected. Scoring is configured in the ExAM Console on a question by question basis.</inlineHelpText>
        <label>Max Score</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Feedback_Screen_Name__c</fullName>
        <label>Mobile App Feedback Screen Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Feedback_Decision_Tree_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Feedback Decision Tree Question</label>
        <referenceTo>Question_Template__c</referenceTo>
        <relationshipLabel>Assignment Manager</relationshipLabel>
        <relationshipName>Assignment_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multi_Assessment_Form_Link__c</fullName>
        <formula>HYPERLINK( &quot;/apex/ExAM__MultiAssessmentManager?id=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;accname=&quot;&amp;Facility_Name__r.Name, &quot;Multi Assessment Form Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi Assessment Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Form_Link__c</fullName>
        <formula>if(ISPICKVAL(Investigation_Type__c,&apos;&apos;),&apos;&apos;,HYPERLINK( CASE( Investigation_Type__c, &quot;School Property and Safety Analysis&quot;, &quot;/apex/ExAM__QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;SUBSTITUTE(&apos;School Property and Safety Analysis&apos;, &apos; &apos;, &apos;%20&apos;), &quot;Safety and Health Inspection Checklist&quot;,&quot;/apex/ExAM__QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;SUBSTITUTE(&apos;Safety and Health Inspection Checklist&apos;, &apos; &apos;, &apos;%20&apos;) ,&quot;School Property and Safety Analysis&quot;, &quot;/apex/ExAM__QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;SUBSTITUTE(&apos;School Property and Safety Analysis&apos;, &apos; &apos;, &apos;%20&apos;), &quot;Safety and Health Inspection Checklist&quot;,&quot;/apex/ExAM__QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;SUBSTITUTE(&apos;Safety and Health Inspection Checklist&apos;, &apos; &apos;, &apos;%20&apos;),&quot;School Property and Safety Analysis&quot;, &quot;/apex/ExAM__QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;SUBSTITUTE(&apos;School Property and Safety Analysis&apos;, &apos; &apos;, &apos;%20&apos;), &quot;Safety and Health Inspection Checklist&quot;,&quot;/apex/ExAM__QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;SUBSTITUTE(&apos;Safety and Health Inspection Checklist&apos;, &apos; &apos;, &apos;%20&apos;),&quot;School Property and Safety Analysis&quot;, &quot;/apex/ExAM__QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;SUBSTITUTE(&apos;School Property and Safety Analysis&apos;, &apos; &apos;, &apos;%20&apos;), &quot;Safety and Health Inspection Checklist&quot;,&quot;/apex/ExAM__QuestionnaireCustomIssue?issueid=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;templatename=&quot;&amp;SUBSTITUTE(&apos;Safety and Health Inspection Checklist&apos;, &apos; &apos;, &apos;%20&apos;),&quot;/s.gif&quot;) , &quot;Link to New Assessment Form&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Viewer_Link__c</fullName>
        <formula>if((InvestigationType__c==&apos;&apos;),&apos;&apos;,HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &quot;apex/ExAM__AssessmentViewer?amid=&quot;&amp;Id&amp;&quot;&amp;asstempid=&quot;&amp;InvestigationType__c , &quot;Standard Viewer Link&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This viewer is used to view and update Assessments inside of Salesforce or within Salesforce communities. You can configure the tabs and fields it displays on a per Assessment Template basis in ExAM Configuration.</inlineHelpText>
        <label>Standard Viewer Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Assignments__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Z-One Time Assessment (DO NOT USE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Inspection_Report__c</fullName>
        <formula>HYPERLINK(&apos;/apex/ExAM__PostInspectionReport?id=&apos;&amp;Id , &apos;Post Inspection Report&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Assessment Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>The priority of the Assignment Manager. This field is typically customized to meet the requirements of the ExAM use case.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Routine</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Assessment_URL__c</fullName>
        <label>Public Assessment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rapid_Assessment_Form_Link__c</fullName>
        <formula>HYPERLINK( &quot;/apex/ExAM__MultiMultiAssessmentManager?id=&quot;&amp;Id&amp;&quot;&amp;accid=&quot;&amp;Facility_Name__r.Id&amp;&quot;&amp;accname=&quot;&amp;Facility_Name__r.Name, &quot;Rapid Assessment Form Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rapid Assessment Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Assignment_Manager1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Assignment Manager 1</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipLabel>Assignment Manager (Related Assignment Manager 1)</relationshipLabel>
        <relationshipName>Assignment_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Assignment_Manager2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Assignment Manager 2</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipLabel>Assignment Manager (Related Assignment Manager 2)</relationshipLabel>
        <relationshipName>Assignment_Manager1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Assignment_Manager3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Assignment Manager 3</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipLabel>Assignment Manager (Related Assignment Manager 3)</relationshipLabel>
        <relationshipName>Assignment_Manager2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Support team user</inlineHelpText>
        <label>Responder Not using</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Request_Life_Cycles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Date_Time__c</fullName>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_End_Date__c</fullName>
        <inlineHelpText>This is the date and time that the Assignment is scheduled to be completed.</inlineHelpText>
        <label>Scheduled End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date__c</fullName>
        <inlineHelpText>This is the date and time that the Assignment is scheduled to take place.</inlineHelpText>
        <label>Scheduled Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Score_Percent__c</fullName>
        <formula>IF(OR(TEXT(Max_Score__c) == &quot;&quot;, Max_Score__c &lt;= 0, TEXT(Total_Score__c) == &quot;&quot; ,Total_Score__c &lt;= 0),0, (Total_Score__c/Max_Score__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the percentage of the total possible points possible (Max Score) scored by the Answer Options chosen for this Assignment Manager.</inlineHelpText>
        <label>Score(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scoring_Report__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ExAM__SafeandHealthySchoolReport?issueid=&quot;+Id+&quot;&amp;accid=&quot;+Facility_Name__c +&quot;&amp;templatename=&quot;+Assessment_Template_Type__c,&quot;Click Link&quot;)</formula>
        <label>Scoring Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Multi-Assessment Manager ID</label>
        <referenceTo>Section_Group__c</referenceTo>
        <relationshipLabel>Assignment Manager</relationshipLabel>
        <relationshipName>Assignment_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <description>Get the Service Area from Account object and display on issue or request</description>
        <formula>TEXT(Facility_Name__r.Service_Area__c)</formula>
        <inlineHelpText>Get the Service Area from Account object and display on issue or request</inlineHelpText>
        <label>Service Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The accounts for vendors, partners and other service providers that you may need in order to accomplish your assignments.</inlineHelpText>
        <label>Service Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assignment Manager List (Service Organization)</relationshipLabel>
        <relationshipName>Assignment_Manager_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Required__c</fullName>
        <inlineHelpText>Use this field to provide additional metadata around the assessment being performed.</inlineHelpText>
        <label>Assessment Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual/Routine</fullName>
                </value>
                <value>
                    <fullName>Complaint Investigation</fullName>
                </value>
                <value>
                    <fullName>Re-inspection</fullName>
                </value>
                <value>
                    <fullName>2nd re-inspection</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Call In</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Mold</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Waste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Configuration_Options_in_Viewer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box enables the end user to configure the Standard Viewer for the purposes of this specific Assignment Manager. For example, adding and removing tabs.</inlineHelpText>
        <label>Show Configuration Options in Viewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Site Contact</inlineHelpText>
        <label>Site Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Issue_Request_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Report__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ExAM__StandardAssessmentReport?issueid=&quot;+Id+&quot;&amp;accid=&quot;+Facility_Name__c +&quot;&amp;templatename=&quot;+Assessment_Template_Type__c,&quot;Click Link&quot;)</formula>
        <label>Standard Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>This is the overall lifecycle status of the Assignment Manager. The status of this field is typically automatically updated on the submission of an Assignment Manager.</inlineHelpText>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Start_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Support_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#FFFFFF</color>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                    <color>#FFFF66</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <inlineHelpText>If scoring has been implemented for this Assessment the total score achieved in the Assignment will be recorded here.</inlineHelpText>
        <label>Total Score</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_on_Assessment__c</fullName>
        <inlineHelpText>Calculates the difference between the Actual Start Time of an Assessment and the Actual End Time of an Assessment.</inlineHelpText>
        <label>Total Time on Assessment</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitor_Register__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Salesforce ID of the Visitor record associated with this Assignment Manager. This field is only populated when the data collection effort takes place outside of Salesforce for example when a public assessment link is being used.</inlineHelpText>
        <label>Visitor Register</label>
        <referenceTo>Visitor_Register__c</referenceTo>
        <relationshipLabel>Assignment Manager</relationshipLabel>
        <relationshipName>Assignment_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isArchive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment Manager</label>
    <listViews>
        <fullName>Closed_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assessment_Template_Type__c</columns>
        <columns>Assessor_Resource__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Assessments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Most_Recent</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assessment_Template_Type__c</columns>
        <columns>Assessor_Resource__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Most Recent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recent_items</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assessment_Template_Type__c</columns>
        <columns>Assessor_Resource__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Recent items</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AM-{0}  {MM}-{DD}-{YYYY}</displayFormat>
        <label>ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>